# FastApply-MCP

./: .env.example  .mcp.json  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CORE_WORKFLOW.md  FASTAPPLY_vs_SERENA.md  MCP_INSTRUCTONS.md  MCP_TOOLS.md  MCP_WORKFLOWS.md  cctools.mdc
src/fastapply/: ast_rule_intelligence.py  ast_search.py  ast_search_official.py  batch_operations.py  deep_semantic_analysis.py  enhanced_search.py  main.py  navigation_tools.py  relationship_mapping.py  ripgrep_integration.py  safe_refactoring.py  security_quality_analysis.py  symbol_operations.py
tests/: README.md  conftest.py
tests/integration/: test_batch_operations_integration.py  test_batch_operations_integration_fixed.py  test_dry_run.py  test_end_to_end.py  test_mcp_server.py  test_safe_refactoring_integration.py  test_security_quality_integration.py  test_symbol_operations_simple.py
tests/performance/: __init__.py  test_ast_grep_performance.py  test_load_testing.py  test_ripgrep_performance.py
tests/unit/: test_ast_mcp_integration.py  test_ast_search.py  test_backup_operations.py  test_batch_operations.py  test_comprehensive_coverage.py  test_critical_infrastructure.py  test_enhanced_search.py  test_file_operations.py  test_file_security_enhanced.py  test_navigation_tools.py  test_new_features.py  test_path_security.py  test_reference_analysis.py  test_response_parsing.py  test_ripgrep_integration.py  test_safe_refactoring.py  test_security_quality_analysis.py  test_security_validation_enhanced.py  test_symbol_operations.py  test_targeted_coverage.py  test_validation.py
